fix: signature dishes cards fixed
added padding to the signature dished cards to add more whitespace around the content to make it easier to read

--- a/dining2.0/menu_page1.css
+++ b/dining2.0/menu_page1.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,700;6..96,800&display=swap');
+
 
 *{
     margin: 0;
@@ -44,13 +47,17 @@ nav h1{
 
 .nav-links a{ 
   color: white; 
-  text-decoration: none; 
   font-weight: bold; 
   font-size: 14px;
   float: left;
   padding-top: 7px;
   letter-spacing: 1.5px;
   line-height: 30px;
+}
+
+.nav-links a:hover{ 
+  color: white; 
+  text-decoration: none;
 }
 
 .underline-hover-effect {
@@ -148,7 +155,6 @@ nav h1{
       cursor: pointer;
   }
 }
-
 
 .toggle .line1 {
   transform: rotate(-45deg) translate(-5px,6px);
@@ -313,6 +319,7 @@ nav h1{
   .dish1 h1 {
       text-align: center;
       padding-top: 7px;
+      font-size: 1.5rem;
   }
 
   .dish1 p{
@@ -339,13 +346,13 @@ nav h1{
   .dish2 h1 {
       text-align: center;
       padding: 7px;
+      font-size: 1.5rem;
   }
 
   .dish2 p {
     text-align: center;
     font-size: 14px;
-    width: 300px;
-    height: 58px;
+    padding: 12px;
   }
 
 
@@ -368,13 +375,13 @@ nav h1{
     .dish3 h1 {
       text-align: center;
       padding: 7px;
+      font-size: 1.5rem;
     }
 
     .dish3 p{
       text-align: center;
       font-size: 14px;
-      width: 300px;
-      height: 58px;
+      padding: 12px;
     }
 
     table,td{
@@ -397,191 +404,177 @@ nav h1{
     }
 
 
+
 /* footer of the website */
 .footer {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 30px 30px 20px 30px;
-    color: #2f2f2f;
-    background-color: #000000;
-    border-top: 1px solid #ffe600;
-  }
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: #2f2f2f;
+  background-color: #000000;
+  border-top: 1px solid #ffe600;
+}
+
+/*selects all the child elements inside the footer*/
+.footer > * {
+  flex:  1 100%;
+  margin: 20px;
+}
+
+.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+  width: 50%;
+  color:rgb(255, 255, 255)
+}
+
+.footer__logo {
+  font-family: 'Bodoni moda', serif;
+  font-size: 40px;
+}
+
+.footer__logo a {
+  color: white;
+  background-size: 100%;
+}
+
+.footer__logo a:hover {
+  color: white;
+  text-decoration: none;
+}
 
 
-  
-  /*selects all the child elements inside the footer*/
-  .footer > * {
-    flex:  1 100%;
-    margin: 20px;
-  }
-  
-  .footer__addr {
-    margin-right: 1.25em;
-    margin-bottom: 2em;
-    width: 50%;
-    color:rgb(255, 255, 255)
-  }
-  
-  .footer__logo {
-    font-family: 'Playfair Display SC', serif;
-    font-size: 40px;
-  }
-  
-  .footer__logo a {
-    background-image: linear-gradient(to left, #c18c00, #ffcb00, #fdea1d, #fdea1d, #ffcb00, #c18c00);
-    background-clip: text;
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
-  }
-  
-   .footer_logo a:link, a:hover, a:active, a:visited{
-    text-decoration: none;
-    color:#ffffff;
-  }
-  .footer__addr h2 {
-    margin-top: 1.3em;
-    font-size: 15px;
-    font-weight: 400;
-  }
-  
-  .nav__title {
-    font-weight: 400;
-    font-size: 15px;
-    color: white;
-    font-family: "Inter";
-  }
-  
-  .footer address {
-    font-style: normal;
-    color: #999;
-  }
-  /*FOOTER BUTTON */
-  .footer__btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 36px;
-    max-width: max-content;
-    background-color: #ffff00;
-    border-radius: 100px;
-    color: rgb(0, 0, 0);
-    line-height: 0;
-    margin: 0.6em 0;
-    font-size: 1rem;
-    padding: 0 1.3em;
-    cursor: pointer;
-    font-family: "Inter", Arial, Helvetica, sans-serif;
-  }
-  
-  .footer__btn:hover {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 36px;
-    max-width: max-content;
-    background-color: #e5ce00;
-    border-radius: 100px;
-    color:rgb(0, 0, 0);
-    line-height: 0;
-    margin: 0.6em 0;
-    font-size: 1rem;
-    padding: 0 1.3em;
-    font-family:  "Inter", Arial, Helvetica, sans-serif;
-  }
-  
-  .footer__btn:active {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 36px;
-    max-width: max-content;
-    background-color: #E0CA00;
-    border-radius: 100px;
-    color:rgb(0, 0, 0);
-    line-height: 0;
-    margin: 0.6em 0;
-    font-size: 1rem;
-    padding: 0 1.3em;
-    box-shadow: inset 0px 2px 2px 3px rgba(0, 0, 0, 0.25);
-    font-family:  "Inter", Arial, Helvetica, sans-serif;
-  }
-  
-  /*other footer components*/
-  .footer ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  .footer li {
-    line-height: 2em;
-    justify-content: center;
-  }
-  
-  .footer a {
-    text-decoration: none;
-  }
-  
-  .footer__nav {
-    display: flex;
-      flex-flow: row wrap;
-  }
-  
-  
+
+ .footer_logo a:link, a:hover, a:active, a:visited{
+  text-decoration: none;
+  color:#ffffff;
+}
+
+.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.nav__title {
+  font-weight: 400;
+  font-size: 15px;
+  color: white;
+  font-family: "Inter";
+}
+
+.footer address {
+  font-style: normal;
+  color: #999;
+}
+/*FOOTER BUTTON */
+.footer__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 150px;
+  background-color: #B7A46A;
+  border-radius: 100px;
+  color: rgb(0, 0, 0);
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+  cursor: pointer;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+}
+
+.footer__btn:hover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  text-decoration: none;
+  width: 150px;
+  background-color: #e2ca81;
+  border-radius: 100px;
+  color:rgb(0, 0, 0);
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+  font-family:  "Inter", Arial, Helvetica, sans-serif;
+}
+
+.footer__btn:active {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 150px;
+  background-color: #e2ca81;
+  border-radius: 100px;
+  color:rgb(0, 0, 0);
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+  box-shadow: inset 0px 2px 2px 3px rgba(0, 0, 0, 0.25);
+  font-family:  "Inter", Arial, Helvetica, sans-serif;
+}
+
+/*other footer components*/
+.footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+  justify-content: center;
+}
+
+.footer__nav {
+  display: flex;
+	flex-flow: row wrap;
+}
+
+
+.footer__nav > * {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}
+
+.nav__ul a {
+  color: #999;
+}
+
+.nav__ul--extra {
+  column-count: 3;
+  column-gap: 1.25em;
+}
+
+.nav__item a:hover{
+  color: rgb(112, 112, 112);
+  text-decoration: none;
+}
+
+
+
+
+/*media queries*/
+
+
+@media screen and (min-width: 40.375em) {
   .footer__nav > * {
-    flex: 1 50%;
-    margin-right: 1.25em;
+    flex: 1;
   }
-  
-  .nav__ul a {
-    color: #999;
+
+  .nav__item--extra {
+    flex-grow: 2;
   }
-  
-  .nav__ul--extra {
-    column-count: 3;
-    column-gap: 1.25em;
+
+  .footer__addr {
+    flex: 1 0px;
   }
-  
-  .legal{
-    display: flex;
-    flex-wrap: wrap;
-    color:#999;
+
+  .footer__nav {
+    flex: 2 0px;
   }
-  
-  .legal a {
-    display: flex;
-    align-items: center;
-    color: #999;
-  }
-  
-  .heart {
-    color: #999;
-  }
-  
-  
-  /*media queries*/
-  @media screen and (min-width: 24.375em) {
-    .legal .legal__links {
-      margin-left: auto;
-    }
-  }
-  
-  @media screen and (min-width: 40.375em) {
-    .footer__nav > * {
-      flex: 1;
-    }
-  
-    .nav__item--extra {
-      flex-grow: 2;
-    }
-  
-    .footer__addr {
-      flex: 1 0px;
-    }
-  
-    .footer__nav {
-      flex: 2 0px;
-    }
-  }
+}
